--- a/LiftNow/Base.lproj/Main.storyboard
+++ b/LiftNow/Base.lproj/Main.storyboard
@@ -475,14 +475,33 @@
         <!--Log-->
         <scene sceneID="UuI-xH-bmb">
             <objects>
-                <viewController id="808-nX-fcI" sceneMemberID="viewController">
+                <viewController id="808-nX-fcI" customClass="LogsVC" customModule="LiftNow" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NFs-mM-zC4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="279" estimatedRowHeight="279" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Vf7-q1-KOj">
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="808-nX-fcI" id="TKe-bI-5Rw"/>
+                                    <outlet property="delegate" destination="808-nX-fcI" id="dBn-GB-3Co"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="FWc-jf-jcZ"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.78823529411764703" green="0.85098039215686272" blue="0.87058823529411766" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="FWc-jf-jcZ" firstAttribute="trailing" secondItem="Vf7-q1-KOj" secondAttribute="trailing" id="Bwq-HH-g0z"/>
+                            <constraint firstItem="Vf7-q1-KOj" firstAttribute="leading" secondItem="FWc-jf-jcZ" secondAttribute="leading" id="TTv-64-0MD"/>
+                            <constraint firstItem="FWc-jf-jcZ" firstAttribute="bottom" secondItem="Vf7-q1-KOj" secondAttribute="bottom" id="eQO-Fc-29b"/>
+                            <constraint firstItem="Vf7-q1-KOj" firstAttribute="top" secondItem="FWc-jf-jcZ" secondAttribute="top" id="kXW-Xs-rIU"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Log" image="logIcon" id="d38-KP-QRc"/>
+                    <connections>
+                        <outlet property="tableView" destination="Vf7-q1-KOj" id="6u3-oX-Ip0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zHl-BH-q1s" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
