--- a/LiftNow/Base.lproj/LaunchScreen.storyboard
+++ b/LiftNow/Base.lproj/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -25,7 +24,7 @@
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.96470588235294119" green="0.98431372549019602" blue="0.99215686274509807" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="Kv2-zo-9AR" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="cMi-gB-Eaj"/>
                             <constraint firstItem="Kv2-zo-9AR" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="t5G-7a-kLQ"/>
@@ -38,9 +37,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="appNameLogo" width="195" height="58.5"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="appNameLogo" width="182" height="52"/>
     </resources>
 </document>
