--- a/LiftNow/vc/home/HomeCell.xib
+++ b/LiftNow/vc/home/HomeCell.xib
@@ -5,6 +5,14 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="BillionDreams_PERSONAL.ttf">
+            <string>BillionDreams</string>
+        </array>
+        <array key="NotoSans-Medium.ttf">
+            <string>NotoSans-Medium</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -18,21 +26,23 @@
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Kc-b0-lpG" userLabel="innerView">
                         <rect key="frame" x="20" y="10" width="522" height="404"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ocen" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9U7-qP-l51">
+                                <rect key="frame" x="220" y="87" width="82" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="Rkk-D1-1LH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="BillionDreams" family="Billion Dreams" pointSize="50"/>
+                                <color key="textColor" red="0.96470588239999999" green="0.98431372549999996" blue="0.99215686270000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WJa-SC-zqn">
                                 <rect key="frame" x="0.0" y="0.0" width="522" height="404"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain"/>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ocean_name" translatesAutoresizingMaskIntoConstraints="NO" id="7tl-YS-Ews">
-                                <rect key="frame" x="156" y="90.5" width="210" height="45"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="Ksk-IG-7TU"/>
-                                    <constraint firstAttribute="width" constant="210" id="awm-n3-TqH"/>
-                                </constraints>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A very calm sea under the gentle rays of the sun, relaxing sound of the waves lapping on the shore." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xej-jW-wKq">
-                                <rect key="frame" x="52" y="155.5" width="418.5" height="168.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <rect key="frame" x="39.5" y="157" width="443.5" height="44"/>
+                                <fontDescription key="fontDescription" name="NotoSans-Medium" family="Noto Sans" pointSize="16"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -63,14 +73,13 @@
                             <constraint firstAttribute="bottom" secondItem="WJa-SC-zqn" secondAttribute="bottom" id="1nj-o4-a5i"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Xej-jW-wKq" secondAttribute="trailing" constant="30" id="Aq7-Cv-p3P"/>
                             <constraint firstAttribute="bottom" secondItem="NOm-mH-kwy" secondAttribute="bottom" constant="40" id="ByA-ta-cIW"/>
-                            <constraint firstItem="7tl-YS-Ews" firstAttribute="centerX" secondItem="7Kc-b0-lpG" secondAttribute="centerX" id="CMr-9O-JWk"/>
-                            <constraint firstItem="NOm-mH-kwy" firstAttribute="top" secondItem="Xej-jW-wKq" secondAttribute="bottom" constant="40" id="EMy-iR-Klp"/>
                             <constraint firstItem="Xej-jW-wKq" firstAttribute="centerX" secondItem="7Kc-b0-lpG" secondAttribute="centerX" id="IwI-lS-thh"/>
-                            <constraint firstItem="7tl-YS-Ews" firstAttribute="top" secondItem="7Kc-b0-lpG" secondAttribute="top" constant="90.5" id="XNO-H0-Jdf"/>
+                            <constraint firstItem="9U7-qP-l51" firstAttribute="top" secondItem="7Kc-b0-lpG" secondAttribute="top" constant="87" id="OzJ-Lf-irY"/>
+                            <constraint firstItem="Xej-jW-wKq" firstAttribute="top" secondItem="9U7-qP-l51" secondAttribute="bottom" constant="10" id="c0X-qB-N47"/>
+                            <constraint firstItem="9U7-qP-l51" firstAttribute="centerX" secondItem="7Kc-b0-lpG" secondAttribute="centerX" id="dQq-MJ-kOV"/>
                             <constraint firstItem="WJa-SC-zqn" firstAttribute="top" secondItem="7Kc-b0-lpG" secondAttribute="top" id="fHb-J4-7A9"/>
                             <constraint firstItem="Xej-jW-wKq" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="7Kc-b0-lpG" secondAttribute="leading" constant="30" id="lCl-NE-ehA"/>
                             <constraint firstItem="WJa-SC-zqn" firstAttribute="leading" secondItem="7Kc-b0-lpG" secondAttribute="leading" id="m1g-GW-Nyk"/>
-                            <constraint firstItem="Xej-jW-wKq" firstAttribute="top" secondItem="7tl-YS-Ews" secondAttribute="bottom" constant="20" id="qaz-l3-cxt"/>
                             <constraint firstItem="NOm-mH-kwy" firstAttribute="centerX" secondItem="7Kc-b0-lpG" secondAttribute="centerX" id="yRu-NC-jwc"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
@@ -98,11 +107,11 @@
                     </userDefinedRuntimeAttribute>
                 </userDefinedRuntimeAttributes>
             </tableViewCellContentView>
-            <color key="backgroundColor" red="0.62352941179999999" green="0.76078431369999999" blue="0.78823529410000004" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.96470588235294119" green="0.98431372549019602" blue="0.99215686274509807" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
                 <outlet property="btn" destination="NOm-mH-kwy" id="G4c-mS-pOX"/>
                 <outlet property="cellBtn" destination="WJa-SC-zqn" id="WoB-jD-F5e"/>
-                <outlet property="img" destination="7tl-YS-Ews" id="K2H-jw-rTg"/>
+                <outlet property="imgLbl" destination="9U7-qP-l51" id="jSO-j1-lpD"/>
                 <outlet property="innerView" destination="7Kc-b0-lpG" id="Ui9-pK-InN"/>
                 <outlet property="title" destination="Xej-jW-wKq" id="yCS-CW-0NQ"/>
             </connections>
@@ -110,7 +119,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="ocean_name" width="210" height="45"/>
         <image name="playIcon" width="20" height="21"/>
     </resources>
 </document>
