--- a/LiftNow/Base.lproj/Main.storyboard
+++ b/LiftNow/Base.lproj/Main.storyboard
@@ -119,7 +119,7 @@
         <scene sceneID="r46-YX-5xg">
             <objects>
                 <viewController hidesBottomBarWhenPushed="YES" id="rDM-st-09g" customClass="OceanQaVC" customModule="LiftNow" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="V0Q-BB-koe">
+                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="V0Q-BB-koe">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
