--- a/LiftNow/Base.lproj/Main.storyboard
+++ b/LiftNow/Base.lproj/Main.storyboard
@@ -136,6 +136,10 @@
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1F9-r7-Cip">
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                                         <subviews>
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i10-cE-tKy">
+                                                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            </view>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CGj-AS-JXl">
                                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                                             </imageView>
@@ -234,13 +238,17 @@
                                                             <constraint firstItem="C2f-c8-Ks8" firstAttribute="leading" secondItem="1F9-r7-Cip" secondAttribute="leading" id="3Dp-In-TTL"/>
                                                             <constraint firstItem="9rX-uA-FL8" firstAttribute="leading" secondItem="1F9-r7-Cip" secondAttribute="leading" constant="30" id="4N8-Fy-epn"/>
                                                             <constraint firstItem="CGj-AS-JXl" firstAttribute="top" secondItem="1F9-r7-Cip" secondAttribute="top" id="5AC-iW-adg"/>
+                                                            <constraint firstAttribute="trailing" secondItem="i10-cE-tKy" secondAttribute="trailing" id="7vs-yz-jG1"/>
                                                             <constraint firstItem="C2f-c8-Ks8" firstAttribute="top" secondItem="1F9-r7-Cip" secondAttribute="top" id="CTr-8F-2j9"/>
+                                                            <constraint firstItem="i10-cE-tKy" firstAttribute="leading" secondItem="1F9-r7-Cip" secondAttribute="leading" id="DV3-WX-6zE"/>
                                                             <constraint firstAttribute="bottom" secondItem="CGj-AS-JXl" secondAttribute="bottom" id="FhM-GH-yue"/>
                                                             <constraint firstItem="CGj-AS-JXl" firstAttribute="leading" secondItem="1F9-r7-Cip" secondAttribute="leading" id="G1l-GM-jz1"/>
                                                             <constraint firstAttribute="trailing" secondItem="CGj-AS-JXl" secondAttribute="trailing" id="GVT-jl-N1V"/>
                                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="cEf-wg-Lwh" secondAttribute="trailing" constant="20" symbolic="YES" id="OAn-6K-gzf"/>
                                                             <constraint firstItem="cEf-wg-Lwh" firstAttribute="leading" secondItem="m1x-bf-kJE" secondAttribute="trailing" constant="12" id="YS9-W7-TOO"/>
                                                             <constraint firstItem="9rX-uA-FL8" firstAttribute="top" secondItem="1F9-r7-Cip" secondAttribute="top" constant="160" id="bFj-Ap-aVh"/>
+                                                            <constraint firstItem="i10-cE-tKy" firstAttribute="top" secondItem="1F9-r7-Cip" secondAttribute="top" id="gjH-2a-HEn"/>
+                                                            <constraint firstAttribute="bottom" secondItem="i10-cE-tKy" secondAttribute="bottom" id="i7P-EM-54E"/>
                                                             <constraint firstItem="m1x-bf-kJE" firstAttribute="leading" secondItem="9rX-uA-FL8" secondAttribute="leading" id="l3E-EH-hyz"/>
                                                             <constraint firstAttribute="trailing" secondItem="C2f-c8-Ks8" secondAttribute="trailing" id="r2D-ah-piX"/>
                                                             <constraint firstAttribute="trailing" secondItem="9rX-uA-FL8" secondAttribute="trailing" constant="40" id="t2e-Cs-pfu"/>
@@ -331,10 +339,11 @@
                         <outlet property="bgView" destination="C2f-c8-Ks8" id="Ksd-DC-Ybc"/>
                         <outlet property="ivAnimate" destination="CGj-AS-JXl" id="Bc3-a9-hvJ"/>
                         <outlet property="qaDesc" destination="pMR-GA-Ivd" id="sJc-t3-kVH"/>
-                        <outlet property="qaView" destination="9rX-uA-FL8" id="Qmj-nH-rjD"/>
+                        <outlet property="qaView" destination="9rX-uA-FL8" id="hbb-eK-Nhn"/>
                         <outlet property="scrollView" destination="97e-Di-AM6" id="2QK-MS-rpW"/>
                         <outlet property="skipBtn" destination="cEf-wg-Lwh" id="lq2-Qp-M0B"/>
                         <outlet property="textField" destination="seF-0Y-aCi" id="OTU-6g-4Ja"/>
+                        <outlet property="videoPlayerView" destination="i10-cE-tKy" id="bOV-rM-NT6"/>
                         <outlet property="videoView" destination="1F9-r7-Cip" id="RXt-4p-GN2"/>
                     </connections>
                 </viewController>
