--- a/LiftNow/Base.lproj/Main.storyboard
+++ b/LiftNow/Base.lproj/Main.storyboard
@@ -166,7 +166,7 @@
                                                                 </constraints>
                                                             </view>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9rX-uA-FL8" userLabel="QAView">
-                                                                <rect key="frame" x="30" y="160" width="344" height="78"/>
+                                                                <rect key="frame" x="30" y="160" width="354" height="78"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Is something making you scared?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pMR-GA-Ivd">
                                                                         <rect key="frame" x="20" y="15" width="206" height="48"/>
@@ -251,14 +251,14 @@
                                                             <constraint firstAttribute="bottom" secondItem="i10-cE-tKy" secondAttribute="bottom" id="i7P-EM-54E"/>
                                                             <constraint firstItem="m1x-bf-kJE" firstAttribute="leading" secondItem="9rX-uA-FL8" secondAttribute="leading" id="l3E-EH-hyz"/>
                                                             <constraint firstAttribute="trailing" secondItem="C2f-c8-Ks8" secondAttribute="trailing" id="r2D-ah-piX"/>
-                                                            <constraint firstAttribute="trailing" secondItem="9rX-uA-FL8" secondAttribute="trailing" constant="40" id="t2e-Cs-pfu"/>
+                                                            <constraint firstAttribute="trailing" secondItem="9rX-uA-FL8" secondAttribute="trailing" constant="30" id="t2e-Cs-pfu"/>
                                                             <constraint firstItem="cEf-wg-Lwh" firstAttribute="top" secondItem="m1x-bf-kJE" secondAttribute="top" id="wzR-q8-Ea5"/>
                                                             <constraint firstAttribute="bottom" secondItem="C2f-c8-Ks8" secondAttribute="bottom" id="ysF-yz-qXA"/>
                                                             <constraint firstItem="m1x-bf-kJE" firstAttribute="top" secondItem="9rX-uA-FL8" secondAttribute="bottom" constant="22.5" id="zqC-ph-bOC"/>
                                                         </constraints>
                                                     </view>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Happy" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U6M-6c-cmB">
-                                                        <rect key="frame" x="128" y="400.5" width="158" height="75"/>
+                                                        <rect key="frame" x="10" y="268" width="394" height="75"/>
                                                         <fontDescription key="fontDescription" name="Desyrel" family="Desyrel" pointSize="60"/>
                                                         <color key="textColor" red="0.76078431372549016" green="0.69803921568627447" blue="0.50196078431372548" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <nil key="highlightedColor"/>
@@ -296,11 +296,12 @@
                                                     <constraint firstItem="MzV-p6-Dtb" firstAttribute="leading" secondItem="djk-8j-QJi" secondAttribute="leading" constant="30" id="2Lt-Cs-sPm"/>
                                                     <constraint firstAttribute="trailing" secondItem="1F9-r7-Cip" secondAttribute="trailing" id="8AZ-j0-qXD"/>
                                                     <constraint firstItem="1F9-r7-Cip" firstAttribute="top" secondItem="djk-8j-QJi" secondAttribute="top" id="RDJ-CA-xDC"/>
+                                                    <constraint firstItem="U6M-6c-cmB" firstAttribute="leading" secondItem="djk-8j-QJi" secondAttribute="leading" constant="10" id="StK-im-D0z"/>
                                                     <constraint firstAttribute="bottom" secondItem="1F9-r7-Cip" secondAttribute="bottom" id="Tmd-yf-v9A"/>
                                                     <constraint firstItem="1F9-r7-Cip" firstAttribute="leading" secondItem="djk-8j-QJi" secondAttribute="leading" id="YZ3-mT-N5R"/>
-                                                    <constraint firstItem="U6M-6c-cmB" firstAttribute="centerX" secondItem="djk-8j-QJi" secondAttribute="centerX" id="a6z-kJ-anq"/>
+                                                    <constraint firstAttribute="trailing" secondItem="U6M-6c-cmB" secondAttribute="trailing" constant="10" id="ZXL-xa-jpw"/>
                                                     <constraint firstItem="MzV-p6-Dtb" firstAttribute="top" secondItem="djk-8j-QJi" secondAttribute="top" constant="60" id="d7V-oK-Wnb"/>
-                                                    <constraint firstItem="U6M-6c-cmB" firstAttribute="centerY" secondItem="djk-8j-QJi" secondAttribute="centerY" constant="-10" id="t8f-DF-dsc"/>
+                                                    <constraint firstItem="U6M-6c-cmB" firstAttribute="top" secondItem="9rX-uA-FL8" secondAttribute="bottom" constant="30" id="wVb-fb-aKB"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
