--- a/LiftNow/Base.lproj/Main.storyboard
+++ b/LiftNow/Base.lproj/Main.storyboard
@@ -140,9 +140,6 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </view>
-                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CGj-AS-JXl">
-                                                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                                            </imageView>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C2f-c8-Ks8" userLabel="bgView">
                                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                                                 <subviews>
@@ -166,7 +163,7 @@
                                                                 </constraints>
                                                             </view>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9rX-uA-FL8" userLabel="QAView">
-                                                                <rect key="frame" x="30" y="160" width="354" height="78"/>
+                                                                <rect key="frame" x="30" y="180" width="354" height="78"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Is something making you scared?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pMR-GA-Ivd">
                                                                         <rect key="frame" x="20" y="15" width="206" height="48"/>
@@ -189,7 +186,7 @@
                                                                 </userDefinedRuntimeAttributes>
                                                             </view>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m1x-bf-kJE">
-                                                                <rect key="frame" x="30" y="260.5" width="134" height="46"/>
+                                                                <rect key="frame" x="30" y="280.5" width="134" height="46"/>
                                                                 <color key="backgroundColor" red="0.0" green="0.36078431372549019" blue="0.61568627450980395" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="46" id="47C-ZD-ByY"/>
@@ -211,7 +208,7 @@
                                                                 </connections>
                                                             </button>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cEf-wg-Lwh">
-                                                                <rect key="frame" x="176" y="260.5" width="134" height="46"/>
+                                                                <rect key="frame" x="176" y="280.5" width="134" height="46"/>
                                                                 <color key="backgroundColor" white="1" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="134" id="VvZ-Nj-rPM"/>
@@ -232,6 +229,15 @@
                                                                     <action selector="skipAction:" destination="rDM-st-09g" eventType="touchUpInside" id="l6W-bn-eR4"/>
                                                                 </connections>
                                                             </button>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Happy" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U6M-6c-cmB">
+                                                                <rect key="frame" x="10" y="288" width="394" height="75"/>
+                                                                <fontDescription key="fontDescription" name="Desyrel" family="Desyrel" pointSize="60"/>
+                                                                <color key="textColor" red="0.76078431372549016" green="0.69803921568627447" blue="0.50196078431372548" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CGj-AS-JXl">
+                                                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                                            </imageView>
                                                         </subviews>
                                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
@@ -241,14 +247,17 @@
                                                             <constraint firstAttribute="trailing" secondItem="i10-cE-tKy" secondAttribute="trailing" id="7vs-yz-jG1"/>
                                                             <constraint firstItem="C2f-c8-Ks8" firstAttribute="top" secondItem="1F9-r7-Cip" secondAttribute="top" id="CTr-8F-2j9"/>
                                                             <constraint firstItem="i10-cE-tKy" firstAttribute="leading" secondItem="1F9-r7-Cip" secondAttribute="leading" id="DV3-WX-6zE"/>
+                                                            <constraint firstAttribute="trailing" secondItem="U6M-6c-cmB" secondAttribute="trailing" constant="10" id="FbQ-WG-ENR"/>
                                                             <constraint firstAttribute="bottom" secondItem="CGj-AS-JXl" secondAttribute="bottom" id="FhM-GH-yue"/>
                                                             <constraint firstItem="CGj-AS-JXl" firstAttribute="leading" secondItem="1F9-r7-Cip" secondAttribute="leading" id="G1l-GM-jz1"/>
                                                             <constraint firstAttribute="trailing" secondItem="CGj-AS-JXl" secondAttribute="trailing" id="GVT-jl-N1V"/>
                                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="cEf-wg-Lwh" secondAttribute="trailing" constant="20" symbolic="YES" id="OAn-6K-gzf"/>
+                                                            <constraint firstItem="U6M-6c-cmB" firstAttribute="leading" secondItem="1F9-r7-Cip" secondAttribute="leading" constant="10" id="Tfg-Fb-59P"/>
                                                             <constraint firstItem="cEf-wg-Lwh" firstAttribute="leading" secondItem="m1x-bf-kJE" secondAttribute="trailing" constant="12" id="YS9-W7-TOO"/>
-                                                            <constraint firstItem="9rX-uA-FL8" firstAttribute="top" secondItem="1F9-r7-Cip" secondAttribute="top" constant="160" id="bFj-Ap-aVh"/>
+                                                            <constraint firstItem="9rX-uA-FL8" firstAttribute="top" secondItem="1F9-r7-Cip" secondAttribute="top" constant="180" id="bFj-Ap-aVh"/>
                                                             <constraint firstItem="i10-cE-tKy" firstAttribute="top" secondItem="1F9-r7-Cip" secondAttribute="top" id="gjH-2a-HEn"/>
                                                             <constraint firstAttribute="bottom" secondItem="i10-cE-tKy" secondAttribute="bottom" id="i7P-EM-54E"/>
+                                                            <constraint firstItem="U6M-6c-cmB" firstAttribute="top" secondItem="9rX-uA-FL8" secondAttribute="bottom" constant="30" id="jbo-O8-Wg6"/>
                                                             <constraint firstItem="m1x-bf-kJE" firstAttribute="leading" secondItem="9rX-uA-FL8" secondAttribute="leading" id="l3E-EH-hyz"/>
                                                             <constraint firstAttribute="trailing" secondItem="C2f-c8-Ks8" secondAttribute="trailing" id="r2D-ah-piX"/>
                                                             <constraint firstAttribute="trailing" secondItem="9rX-uA-FL8" secondAttribute="trailing" constant="30" id="t2e-Cs-pfu"/>
@@ -257,12 +266,6 @@
                                                             <constraint firstItem="m1x-bf-kJE" firstAttribute="top" secondItem="9rX-uA-FL8" secondAttribute="bottom" constant="22.5" id="zqC-ph-bOC"/>
                                                         </constraints>
                                                     </view>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Happy" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U6M-6c-cmB">
-                                                        <rect key="frame" x="10" y="268" width="394" height="75"/>
-                                                        <fontDescription key="fontDescription" name="Desyrel" family="Desyrel" pointSize="60"/>
-                                                        <color key="textColor" red="0.76078431372549016" green="0.69803921568627447" blue="0.50196078431372548" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MzV-p6-Dtb" userLabel="backView">
                                                         <rect key="frame" x="30" y="60" width="30" height="30"/>
                                                         <subviews>
@@ -275,7 +278,7 @@
                                                                 </connections>
                                                             </button>
                                                         </subviews>
-                                                        <color key="backgroundColor" red="0.58431372550000005" green="0.60784313729999995" blue="0.6588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="30" id="13w-uD-9ee"/>
                                                             <constraint firstItem="XrB-Cm-WWd" firstAttribute="top" secondItem="MzV-p6-Dtb" secondAttribute="top" id="36K-vz-qs1"/>
@@ -296,12 +299,9 @@
                                                     <constraint firstItem="MzV-p6-Dtb" firstAttribute="leading" secondItem="djk-8j-QJi" secondAttribute="leading" constant="30" id="2Lt-Cs-sPm"/>
                                                     <constraint firstAttribute="trailing" secondItem="1F9-r7-Cip" secondAttribute="trailing" id="8AZ-j0-qXD"/>
                                                     <constraint firstItem="1F9-r7-Cip" firstAttribute="top" secondItem="djk-8j-QJi" secondAttribute="top" id="RDJ-CA-xDC"/>
-                                                    <constraint firstItem="U6M-6c-cmB" firstAttribute="leading" secondItem="djk-8j-QJi" secondAttribute="leading" constant="10" id="StK-im-D0z"/>
                                                     <constraint firstAttribute="bottom" secondItem="1F9-r7-Cip" secondAttribute="bottom" id="Tmd-yf-v9A"/>
                                                     <constraint firstItem="1F9-r7-Cip" firstAttribute="leading" secondItem="djk-8j-QJi" secondAttribute="leading" id="YZ3-mT-N5R"/>
-                                                    <constraint firstAttribute="trailing" secondItem="U6M-6c-cmB" secondAttribute="trailing" constant="10" id="ZXL-xa-jpw"/>
                                                     <constraint firstItem="MzV-p6-Dtb" firstAttribute="top" secondItem="djk-8j-QJi" secondAttribute="top" constant="60" id="d7V-oK-Wnb"/>
-                                                    <constraint firstItem="U6M-6c-cmB" firstAttribute="top" secondItem="9rX-uA-FL8" secondAttribute="bottom" constant="30" id="wVb-fb-aKB"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
