1.	In the ocean or rain video, I cannot hear any audio on my phone. Please insert the ocean audio and the rain audio into the app since hearing is as important for the mind as the seeing.   - detail page enable audio - done  2.	On the bottom tab with the Video, Art, and Reflection icons. Please change “Video” to “Home” and make the icon be a home icon (from the current video icon). The Art icon should be perhaps a canvas and a paintbrush – rather than what we have now. The Reflection icon is OK as is.   - tabbar change follow figma - working  3.	When we are in a tab that icon is in blue and the other two icons are in light grey and not visible. Grey is not an ideal color since it feels like it’s been grayed out and not selectable. Whereas, in reality, it is selectable. I think all the icons should be in the blue color all the time. And the one icon that is selected should have an orange background so that it is clear that it is selected.   - tabbar change follow figma - working  4.	I know that we are not working on the art section right now, but to illustrate the purpose of the section, would it be possible to add two images into that section. So when we click on the art icon, we see one image and we can scroll right to the second image and scroll back left to the first image. This way we can show the concept without bringing in all the images.   - vivek need to share image - pending  5.	On the Reflection page, the Ocean/Rain logo should be more visible and in color and not greyed out since it is not very visible.   - follow figma - working  6.	Can we change the interval between questions to be 30 seconds?  - done  7.	The video is on a repeat cycle around every 30 seconds, but it is a jarring transition between the end of the video and the start of the next cycle. I have attached a video of what I mean by this. Can we make this transition smoother?  - need to replace video for ocean - done  8.	For the description under Ocean please replace “A very calm sea…” with “D

--- a/LiftNow/Base.lproj/Main.storyboard
+++ b/LiftNow/Base.lproj/Main.storyboard
@@ -525,11 +525,11 @@
             </objects>
             <point key="canvasLocation" x="3500" y="828"/>
         </scene>
-        <!--Video-->
+        <!--Home-->
         <scene sceneID="7Gp-YY-Zup">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4wR-cW-q8o" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Video" image="videoIcon" id="2vn-Td-of0"/>
+                    <tabBarItem key="tabBarItem" title="Home" image="videoIcon" selectedImage="videoSel-Icon" id="2vn-Td-of0"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="eDc-mY-v6P">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -751,7 +751,7 @@
                         <viewLayoutGuide key="safeArea" id="YHZ-gE-hLb"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Art" image="artIcon" id="w8h-aX-ymZ"/>
+                    <tabBarItem key="tabBarItem" title="Art" image="artIcon" selectedImage="artSel-Icon" id="w8h-aX-ymZ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mqf-yw-96A" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -763,14 +763,16 @@
     </inferredMetricsTieBreakers>
     <resources>
         <image name="appNameLogo" width="182" height="52"/>
-        <image name="artIcon" width="24" height="24"/>
+        <image name="artIcon" width="28" height="28"/>
+        <image name="artSel-Icon" width="24" height="24"/>
         <image name="backBtn" width="24" height="24"/>
         <image name="logIcon" width="28" height="28"/>
         <image name="oceanBtnBg" width="214" height="55"/>
         <image name="ocean_name" width="210" height="45"/>
         <image name="playIcon" width="20" height="21"/>
         <image name="successBell" width="492" height="492"/>
-        <image name="videoIcon" width="27" height="23"/>
+        <image name="videoIcon" width="28" height="25"/>
+        <image name="videoSel-Icon" width="28" height="25"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
